# linux-device-drivers-c

./: .gitmodules  CMakeLists.txt  cross-config.txt
.tmp_versions/: hello.mod
examplesOld/scull/: .main.o.cmd  Makefile  main.c  pipe.c
examplesOld/simple/: .simple.ko.cmd  .simple.mod.o.cmd  .simple.o.cmd  modules.order  simple.c  simple.ko  simple.mod.c
examplesOld/simple/.tmp_versions/: simple.mod
modules/hello/: .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  Makefile  hello.c  hello.ko  hello.mod.c  modules.order
modules/hello/.tmp_versions/: hello.mod
scripts/: scull_load.sh
